@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2020, 2023 IBM Corporation and others.
+ * Copyright (c) 2020, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -22,7 +22,7 @@ import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
 
 public class PatternMatching16Test extends AbstractRegressionTest {
 
-	private static final JavacTestOptions JAVAC_OPTIONS = new JavacTestOptions("-source 16 --enable-preview -Xlint:-preview");
+	private static final JavacTestOptions JAVAC_OPTIONS = new JavacTestOptions("-source 16");
 	static {
 //		TESTS_NUMBERS = new int [] { 40 };
 //		TESTS_RANGE = new int[] { 1, -1 };
@@ -195,7 +195,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 				options);
 	}
 	public void test003a() {
-		Map<String, String> options = getCompilerOptions(true);
+		Map<String, String> options = getCompilerOptions(false);
 		String[] testFiles =
 				new String[] {
 						"X3.java",
@@ -211,8 +211,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 						"	}\n" +
 						"}\n",
 				};
-		if (this.complianceLevel < ClassFileConstants.JDK23) {
-			runNegativeTest(
+		runNegativeTest(
 				testFiles,
 				"----------\n" +
 				"1. ERROR in X3.java (at line 4)\n" +
@@ -224,9 +223,6 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 				null,
 				true,
 				options);
-		} else {
-			runConformTest(testFiles, "int", options, new String[] {"--enable-preview"}, JavacTestOptions.DEFAULT);
-		}
 	}
 	public void test004() {
 		Map<String, String> options = getCompilerOptions(true);
@@ -1775,7 +1771,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 						"}\n",
 				},
 				"null",
-				getCompilerOptions(true));
+				getCompilerOptions(false));
 	}
 	public void test032a() {
 		runConformTest(
@@ -1800,7 +1796,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 						"}\n",
 				},
 				"one",
-				getCompilerOptions(true));
+				getCompilerOptions(false));
 	}
 	public void test033() {
 		runNegativeTest(
@@ -1909,7 +1905,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 				"",
 				null,
 				true,
-				getCompilerOptions(true));
+				getCompilerOptions(false));
 	}
 	public void test036() {
 		runConformTest(
@@ -1933,7 +1929,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 						"}\n",
 				},
 				"one",
-				getCompilerOptions(true));
+				getCompilerOptions(false));
 	}
 	public void test037() {
 		runNegativeTest(
@@ -2304,7 +2300,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 		compilerOptions.put(CompilerOptions.OPTION_PreserveUnusedLocal, old);
 	}
 	public void test052() {
-		Map<String, String> compilerOptions = getCompilerOptions(true);
+		Map<String, String> compilerOptions = getCompilerOptions(false);
 		String old = compilerOptions.get(CompilerOptions.OPTION_PreserveUnusedLocal);
 		compilerOptions.put(CompilerOptions.OPTION_PreserveUnusedLocal, CompilerOptions.OPTIMIZE_OUT);
 		runConformTest(
